--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
     "version": "0.1.1",
     "private": false,
     "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint",
+        "debug": "node ./examples/index.js",
         "publish": "rollup -c"
     },
     "main": "dist/micro-reaction.js",
