--- a/package.json
+++ b/package.json
@@ -1,55 +1,49 @@
 {
-    "name": "micro-reaction",
-    "version": "0.1.1",
-    "private": false,
-    "scripts": {
-        "debug": "node ./examples/index.js",
-        "publish": "rollup -c"
+  "name": "micro-reaction",
+  "version": "0.1.2",
+  "private": false,
+  "scripts": {
+    "debug": "node ./examples/index.js",
+    "publish": "rollup -c"
+  },
+  "main": "dist/micro-reaction.js",
+  "dependencies": {},
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^4.0.0",
+    "@vue/cli-plugin-eslint": "^4.0.0",
+    "@vue/cli-service": "^4.0.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.3",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "rollup": "^1.27.5",
+    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-uglify": "^6.0.3",
+    "vue-template-compiler": "^2.6.10"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
     },
-    "main": "dist/micro-reaction.js",
-    "dependencies": {
-        "@nx-js/observer-util": "^4.2.2",
-        "core-js": "^3.3.2",
-        "react": "^16.12.0",
-        "vue": "^2.6.10",
-        "wana": "^0.10.5"
-    },
-    "devDependencies": {
-        "@vue/cli-plugin-babel": "^4.0.0",
-        "@vue/cli-plugin-eslint": "^4.0.0",
-        "@vue/cli-service": "^4.0.0",
-        "babel-core": "^6.26.3",
-        "babel-eslint": "^10.0.3",
-        "babel-plugin-external-helpers": "^6.22.0",
-        "babel-preset-env": "^1.7.0",
-        "eslint": "^5.16.0",
-        "eslint-plugin-vue": "^5.0.0",
-        "rollup": "^1.27.5",
-        "rollup-plugin-babel": "^3.0.7",
-        "rollup-plugin-node-resolve": "^5.2.0",
-        "rollup-plugin-uglify": "^6.0.3",
-        "vue-template-compiler": "^2.6.10"
-    },
-    "eslintConfig": {
-        "root": true,
-        "env": {
-            "node": true
-        },
-        "extends": [
-            "plugin:vue/essential"
-        ],
-        "rules": {},
-        "parserOptions": {
-            "parser": "babel-eslint"
-        }
-    },
-    "postcss": {
-        "plugins": {
-            "autoprefixer": {}
-        }
-    },
-    "browserslist": [
-        "> 1%",
-        "last 2 versions"
-    ]
+    "extends": [
+      "plugin:vue/essential"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
